# depot_tools

./: Cargo.toml  LICENSE
depot_core/: Cargo.toml
depot_core/src/: lib.rs
src/: main.rs
